--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
         "jsx": "preserve",
         "sourceMap": true
     },
+    "include": [
+        "ts"
+    ],
     "exclude": [
         "node_modules",
         "**/node_modules/*"
