Update Scala and SBT versions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,7 @@
         "*.fun": "typescript"
     },
     "typescript.validate.enable": false,
+    "files.watcherExclude": {
+        "**/target": true
+    },
 }
