--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "*.fun": "typescript"
+        "*.fun": "typescript",
+        "*.mls": "typescript"
     },
     "typescript.validate.enable": false,
     "files.watcherExclude": {
