--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -19,3 +19,5 @@ jobs:
         java-version: 1.8
     - name: Run tests
       run: sbt test
+    - name: Check no changes
+      run: git diff-files --quiet
