--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         node-version: '16.x'
     - name: Install TypeScript
-      run: npm install --package-lock-only
+      run: npm install
     - name: Run tests
       run: sbt test
     - name: Check no changes
