--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Run tests
       run: sbt test
     - name: Check no changes
-      run: git diff-files -p --exit-code --diff-filter=ADMR -w
+      run: git diff-files -p --exit-code
