--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         node-version: '17.x'
     - name: Install TypeScript
-      run: npm install
+      run: npm ci
     - name: Run tests
       run: sbt test
     - name: Check no changes
