--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "typescript": "^4.7.4",
-    "json5": "^2.2.3"
+    "fp-ts": "^2.16.0",
+    "json5": "^2.2.3",
+    "typescript": "^4.7.4"
   }
 }
