WIP: Ignore tsc-generated files

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -19,14 +19,8 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: '17.x'
-    - name: Install TypeScript
-      run: npm ci
-    - name: Install test libraries for es projects
-      working-directory: ./driver/js/src/test/esprojects
-      run: npm ci
-    - name: Install test libraries for cjs projects
-      working-directory: ./driver/js/src/test/cjsprojects
-      run: npm ci
+    - name: Prepare TypeScript
+      run: ./scripts/ts-prepare.sh
     - name: Run tests
       run: sbt test -J-XX:+UseG1GC
     - name: Check no changes
