--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,6 @@ metals.sbt
 project/Dependencies.scala
 project/metals.sbt
 **.worksheet.sc
+driver/js/src/test/cjsprojects/js/ts/
+driver/js/src/test/esprojects/js/my_ts_path/
 .DS_Store
