--- a/compiler/shared/main/scala/mlscript/compiler/codegen/Makefile
+++ b/compiler/shared/main/scala/mlscript/compiler/codegen/Makefile
@@ -1,5 +1,5 @@
-CXX := clang++
-CFLAGS := $(CFLAGS) -O3 -Wall -Wextra -ggdb3 -std=c++17 # -fsanitize=address
+CXX := c++
+CFLAGS := $(CFLAGS) -O3 -Wall -Wextra -ggdb3 -std=c++17 # -fsanitize=address,leak
 LDFLAGS := $(LDFLAGS) -Wl,-stack_size -Wl,0x20000000
 SRC := mls.cpp
 INCLUDES = mlsprelude.h
@@ -18,5 +18,5 @@ pre: $(SRC)
 clean:
 	rm -r $(TARGET) $(TARGET).dSYM
 
-$(TARGET): pre $(SRC) $(INCLUDES)
+$(TARGET): $(SRC) $(INCLUDES)
 	$(CXX) $(CFLAGS) $(LDFLAGS) $(SRC) -o $(TARGET)
