First nofib test

--- a/compiler/shared/test/diff-ir/cpp/Makefile
+++ b/compiler/shared/test/diff-ir/cpp/Makefile
@@ -1,7 +1,7 @@
-CXX := c++
-CFLAGS := $(CFLAGS) -O3 -Wall -Wextra -ggdb3 -std=c++17 # -fsanitize=address,leak
-LDFLAGS := $(LDFLAGS) -Wl,-stack_size -Wl,0x20000000 # -L/opt/homebrew/lib -lmimalloc
-SRC := mls.cpp
+CXX := /opt/llvm/bin/clang++
+CFLAGS := $(CFLAGS) -O3 -Wall -Wextra -ggdb3 -std=c++20 -I/opt/homebrew/include #-fsanitize=address,leak
+LDFLAGS := $(LDFLAGS) -Wl,-stack_size -Wl,0x20000000 -L/opt/homebrew/lib -lgmp -lmimalloc
+SRC := gcd.cpp
 INCLUDES = mlsprelude.h
 TARGET := mls
 
@@ -9,7 +9,7 @@ TARGET := mls
 
 all: $(TARGET)
 
-run: $(TARGET)
+run: $(TARGET) 
 	./$(TARGET)
 
 pre: $(SRC)
