Adjust compilation options

--- a/compiler/shared/test/diff-ir/cpp/Makefile
+++ b/compiler/shared/test/diff-ir/cpp/Makefile
@@ -1,6 +1,6 @@
 CXX := /opt/llvm/bin/clang++
-CFLAGS := $(CFLAGS) -O3 -Wall -Wextra -ggdb3 -std=c++20 -I/opt/homebrew/include #-fsanitize=address,leak
-LDFLAGS := $(LDFLAGS) -Wl,-stack_size -Wl,0x20000000 -L/opt/homebrew/lib -lgmp -lmimalloc
+CFLAGS := $(CFLAGS) -O3 -Wall -Wextra -ggdb3 -std=c++20 -I/opt/homebrew/include
+LDFLAGS := $(LDFLAGS) -L/opt/homebrew/lib -lmimalloc -lgmp
 SRC := gcd.cpp
 INCLUDES = mlsprelude.h
 TARGET := mls
