allow method calls

--- a/compiler/shared/test/diff-ir/cpp/Makefile
+++ b/compiler/shared/test/diff-ir/cpp/Makefile
@@ -1,5 +1,5 @@
 CXX := /opt/llvm/bin/clang++
-CFLAGS := $(CFLAGS) -O3 -Wall -Wextra -ggdb3 -std=c++20 -I/opt/homebrew/include
+CFLAGS := $(CFLAGS) -O3 -Wall -Wextra -ggdb3 -std=c++20 -I/opt/homebrew/include -Wno-inconsistent-missing-override
 LDFLAGS := $(LDFLAGS) -L/opt/homebrew/lib -lmimalloc -lgmp
 SRC := gcd.cpp
 INCLUDES = mlsprelude.h
