Improve Cpp backend tests

--- a/compiler/shared/test/diff-ir/cpp/Makefile
+++ b/compiler/shared/test/diff-ir/cpp/Makefile
@@ -1,11 +1,13 @@
-CXX := /opt/llvm/bin/clang++
-CFLAGS := $(CFLAGS) -O3 -Wall -Wextra -ggdb3 -std=c++20 -I/opt/homebrew/include -Wno-inconsistent-missing-override
+CXX := clang++
+CFLAGS := $(CFLAGS) -O3 -Wall -Wextra -std=c++20 -I. -I/opt/homebrew/include -Wno-inconsistent-missing-override
 LDFLAGS := $(LDFLAGS) -L/opt/homebrew/lib -lmimalloc -lgmp
-SRC := gcd.cpp
+SRC :=
 INCLUDES = mlsprelude.h
-TARGET := mls
+DST :=
+DEFAULT_TARGET := mls
+TARGET := $(or $(DST),$(DEFAULT_TARGET))
 
-.PHONY: pre all run clean
+.PHONY: pre all run clean auto
 
 all: $(TARGET)
 
@@ -17,6 +19,8 @@ pre: $(SRC)
 
 clean:
 	rm -r $(TARGET) $(TARGET).dSYM
+
+auto: $(TARGET)
 
 $(TARGET): $(SRC) $(INCLUDES)
 	$(CXX) $(CFLAGS) $(LDFLAGS) $(SRC) -o $(TARGET)
