--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -6,7 +6,7 @@ on:
     branches: [ mlscript ]
 
 jobs:
-  lints:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
