--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -12,5 +12,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
-      - name: Run Test
-        run: nix develop --command sbt compilerJVM/test
+      - uses: rrbutani/use-nix-shell-action@v1
+        with:
+          devShell: .#default
+      - name: Run test
+        run: sbt -J-Xmx4096M -J-Xss4M test
+      - name: Check no changes
+        run: git diff-files -p --exit-code
